# gecko

./: Cargo.toml
src/: database.rs  diff.rs  git.rs  issues.rs  main.rs  model.rs  relative_time.rs  repository.rs  time_utils.rs  user.rs
static/: main.css
templates/: commit.html  commits.html  file.html  index.html  login.html  new.html  password.html  repository.html  settings.html  signup.html  tree.html
templates/repository/: branches.html  index.html
templates/repository/issues/: index.html  issue.html  new.html
templates/shared/: header.html
templates/user/: index.html  log.html
