[package]
name = "gecko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
git2 = "0.16.1"
anyhow = "1.0.69"
askama = { version = "0.12.0", default-features = false, features = ["with-actix-web"] }
askama_actix = "0.14.0"
mongodb = "2.4.0"
