[package]
name = "gecko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-files = "0.6.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
actix-identity = "0.5.2"
serde = { version = "1.0.155", features = ["derive"] }
serde_json = "1.0.94"
git2 = "0.16.1"
anyhow = "1.0.69"
askama = { version = "0.12.0", default-features = false, features = ["with-actix-web"] }
askama_actix = "0.14.0"
mongodb = "2.4.0"
futures = "0.3.27"
bson = "2.6.0"
humansize = "2.1.3"
markdown = "1.0.0-alpha.7"
time = { version = "0.3.20", features = ["macros"] }
blake3 = "1.3.3"
rand = "0.8.5"
sha2 = "0.10.6"
